; ModuleID = '/home/carl/AnghaBench/git/extr_bisect.c_get_commit_reference.c'
source_filename = "/home/carl/AnghaBench/git/extr_bisect.c_get_commit_reference.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.commit = type { i32 }
%struct.repository = type { i32 }
%struct.object_id = type { i32 }

@.str = private unnamed_addr constant [27 x i8] c"Not a valid commit name %s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.commit* (%struct.repository*, %struct.object_id*)* @get_commit_reference to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.commit* @get_commit_reference(%struct.repository* %0, %struct.object_id* %1) #0 {
  %3 = alloca %struct.repository*, align 8
  %4 = alloca %struct.object_id*, align 8
  %5 = alloca %struct.commit*, align 8
  store %struct.repository* %0, %struct.repository** %3, align 8
  store %struct.object_id* %1, %struct.object_id** %4, align 8
  %6 = load %struct.repository*, %struct.repository** %3, align 8
  %7 = load %struct.object_id*, %struct.object_id** %4, align 8
  %8 = call %struct.commit* @lookup_commit_reference(%struct.repository* %6, %struct.object_id* %7)
  store %struct.commit* %8, %struct.commit** %5, align 8
  %9 = load %struct.commit*, %struct.commit** %5, align 8
  %10 = icmp ne %struct.commit* %9, null
  br i1 %10, label %16, label %11

11:                                               ; preds = %2
  %12 = call i32 @_(i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0))
  %13 = load %struct.object_id*, %struct.object_id** %4, align 8
  %14 = call i32 @oid_to_hex(%struct.object_id* %13)
  %15 = call i32 @die(i32 %12, i32 %14)
  br label %16

16:                                               ; preds = %11, %2
  %17 = load %struct.commit*, %struct.commit** %5, align 8
  ret %struct.commit* %17
}

declare dso_local %struct.commit* @lookup_commit_reference(%struct.repository*, %struct.object_id*) #1

declare dso_local i32 @die(i32, i32) #1

declare dso_local i32 @_(i8*) #1

declare dso_local i32 @oid_to_hex(%struct.object_id*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
